--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ai": "^2.2.31",
     "classnames": "^2.5.1",
     "graphql-request": "^6.1.0",
     "next": "14.0.4",
+    "openai": "^4.24.1",
+    "openai-edge": "^1.2.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
